[package]
name = "pikeru"
version = "0.1.0"
edition = "2021"
default-run = "pikeru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pikeru"
path = "src/main.rs"

[[bin]]
name = "portal"
path = "src/portal.rs"

[dependencies]
iced = { version = "0.12.1", features = ["image", "tokio", "debug", "advanced", "lazy"] }
num_cpus = "1.16.0"
tokio = { version = "1.37.0", features = ["full"] }
img = { package = "image", version = "0.25.1" }
itertools = "0.12.1"
video-rs = { version = "0.7.3", features = ["ndarray"] }
ndarray = "0.15.6"
getopts = "0.2.21"
iced_aw = { version = "0.8.0", features = ["menu"] }
inotify = "0.10.2"
md-5 = "0.10.6"
fuzzy-matcher = "0.3.7"
zbus = { version = "4.2.2", features = ["tokio"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
ignore = "0.4.22"
log = "0.4.21"
env_logger = "0.11.3"

