[package]
name = "pikeru"
version = "0.1.0"
edition = "2021"
default-run = "pikeru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pikeru"
path = "src/main.rs"

[[bin]]
name = "portal"
path = "src/portal.rs"

[dependencies]
iced = { version = "0.12.1", features = ["image", "tokio", "advanced", "lazy", "svg"] }
num_cpus = "1.16.0"
tokio = { version = "1.37.0", features = ["full"] }
img = { package = "image", version = "0.25.1" }
itertools = "0.12.1"
video-rs = { version = "0.10.5", features = ["ndarray"] }
ndarray = "0.16.1"
getopts = "0.2.21"
iced_aw = { version = "0.9.3", features = ["menu","context_menu"] }
inotify = "0.11"
md-5 = "0.10.6"
fuzzy-matcher = "0.3.7"
zbus = { version = "4.2.2", features = ["tokio"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
ignore = "0.4.22"
log = "0.4.21"
env_logger = "0.11.3"
ctrlc = { version = "3.4.4", features = ["termination"] }
iced_gif = "0.5"
resvg = "0.42.0"
tiny-skia = "0.11.4"
unicode-segmentation = "1.11.0"
webp = "0.3.0"
chrono = "0.4.38"
